Описание того, что вы изменили

--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
                     </ul>
                     
                     <button class="burger-btn" id="burgerBtn">
-                        <img src="scr/images/menu.webp" alt="Меню">
+                        <img src="src/images/menu.webp" alt="Меню">
                     </button>
                 </div>
                 
@@ -46,7 +46,7 @@
             </div>
         </div>
     </header>
-    <script src="scr/js/menu.js"></script>
+    <script src="src/js/menu.js"></script>
 
 <div class="contacts-page">
     <div class="contacts-title">КОНТАКТЫ</div>
